Adding ResponseEntinty type for return the status for delete any customer!!!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=student
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.hibernate.show-sql=true
+server.error.include-message=always 
